# 1.0.2-20170325
* Selenium的依赖版本升级到3.0
* jre的依赖版本升级到1.8